# selfhost-fin

./: .gitignore  README.md
crytata/: .gitignore  README_BN_PACKAGE.md  README_BTC_DOWNLOAD.md  README_CSV_DOWNLOAD.md  README_CUSTOM_DOWNLOAD.md  docker-compose.yml  download_btc_2025_06_07.sh  download_btc_2025_06_07_fixed.sh  download_btc_all_data.sh  download_btc_complete.sh  download_btc_complete_2025.sh  download_btc_csv_simple.py  download_btc_csv_with_headers.sh  download_btc_custom.sh  download_btc_data.sh  download_btc_futures.sh  download_btc_spot.sh  download_btc_trades.sh  download_config_example.json  process_btc_data.py  pyproject.toml  quick_start.sh  verify_data.sh
crytata/database/init/: 01-init-crytata.sql
crytata/examples/: basic_usage.py  download_futures_2025.py
crytata/src/crytata/: __init__.py  cli.py  core.py  historical_downloader.py  models.py  storage.py  timescaledb_config.py
crytata/src/crytata/bn/: __init__.py  cli.py  downloader.py  models.py
crytata/tests/: .download_progress.json  test_bn_downloader.py  test_bn_models.py
data-pipeline/: README.md  check-env.sh  create_password_file.py  docker-compose.yml  init-hummingbot.sh  setup-hummingbot.sh
data-pipeline/conf/: conf_client.yml  conf_global.yml
vnpy-cry/: .gitignore  Dockerfile  Dockerfile.collector  README.md  config.env.template  docker-compose.yml  install-nogui.sh  pyproject.toml  pyproject.toml.backup  requirements-collector.txt  requirements.txt  test_nogui.py  test_simple.py
vnpy-cry/config/database/: postgresql.conf
vnpy-cry/config/vnpy/: vnpy_config.py
vnpy-cry/database/timescaledb/init/: 01-init-vnpy.sql
vnpy-cry/scripts/: data_collector.py  main.py  setup.py  start_webtrader.py
vnpy-cry/src/vnpy_cry/: __init__.py
vnpy-cry/src/vnpy_cry/config/: __init__.py  settings.py
vnpy-cry/src/vnpy_cry/core/: __init__.py  data_collector.py  main.py  web_trader.py
vnpy-cry/src/vnpy_cry/data/: __init__.py
vnpy-cry/src/vnpy_cry/monitoring/: __init__.py
vnpy-cry/src/vnpy_cry/strategies/: __init__.py
vnpy-cry/src/vnpy_cry/utils/: __init__.py
